2008-07-25  Neil Roberts  <neil@o-hand.com>

	* examples/thumbnailer.rb: Update to 0.8 API. Specify the size of
	the pixbuf while loading instead of scaling afterwards so that SVG
	images will look nice.

2008-07-25  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltscript.c: Bindings for ClutterScript

	* examples/test-script.rb: Example program for ClutterScript

	* clutter/extconf.rb: Added rbcltscript.o

	* clutter/rbclutter.h: 
	* clutter/rbclutter.c (Init_clutter): Call rbclt_script_init and
	define a wrapper for the missing GConnectFlags from GLib

2008-07-23  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclttexture.c (rbclt_texture_init): Renamed
	Clutter::Texture::Error to Clutter::TextureError to match the rest
	of the error classes.

2008-07-23  Neil Roberts  <neil@o-hand.com>

	* clutter/rbclttexture.c: Update to 0.8 so that it doesn't include
	anything related to pixbufs and removes the properties for
	accessing the tiles. (Tiles can now be accessed from the Cogl
	texture)

	* clutter/rbcltactor.h: 
	* clutter/rbcltactor.c: Make the actor class a public variable.

	* clutter/extconf.rb: gdk-pixbuf is no longer required

2008-07-23  Neil Roberts  <neil@o-hand.com>

	* README: Updated

2008-07-23  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltcontainer.c: Added a wrapper for
	Clutter::Container#get_child_meta

	* clutter/rbcltchildmeta.c: Added a wrapper for Clutter::ChildMeta

	* clutter/extconf.rb: Added rbcltchildmeta.o

	* clutter/rbclutter.c (Init_clutter): Call rbclt_child_meta_init

2008-07-22  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcltactor.c: Added an override for the 'type_register'
	class method so that custom subclasses of Clutter::Actor won't
	break the reference counting.

2008-07-21  Neil Roberts  <neil@o-hand.com>

	* clutter/rbcogltexture.c: Converted to use the boxed value of
	CLUTTER_TYPE_TEXTURE_HANDLE so that it can be used as a value for
	the 'cogl_texture' property of Clutter::Texture.
