@@ -1,5 +1,13 @@
 2008-07-25  Neil Roberts  <neil@o-hand.com>
 
+	* clutter/rbcltscore.c: Bindings for ClutterScore
+
+	* clutter/rbclutter.c (Init_clutter): Call rbclt_score_init
+
+	* clutter/extconf.rb: Added rbcltscore.o
+
+2008-07-25  Neil Roberts  <neil@o-hand.com>
+
 	* examples/thumbnailer.rb: Update to 0.8 API. Specify the size of
 	the pixbuf while loading instead of scaling afterwards so that SVG
 	images will look nice.
